fix: add styles for block image alignfull

--- a/assets/source/3.0/sass/blocks.scss
+++ b/assets/source/3.0/sass/blocks.scss
@@ -41,3 +41,19 @@
         }
     }
 }
+
+.alignfull {
+    margin-left: calc( -100vw / 2 + 100% / 2 );
+    margin-right: calc( -100vw / 2 + 100% / 2 );
+    max-width: 100vw;
+    width: 100vw;
+
+    img {
+        height: auto;
+        width: 100%;
+    }
+
+    .c-image__caption {
+        text-align: center;
+    }
+}
